Remove default ftp scheme on omnibox inputs starting with "ftp.".

Support for ftp is deprecated so encouraging its use with a
special-case fixup no longer makes sense.

Bug: 798166
Change-Id: I8644164cf7229b435c1c452c74a33f26fb4543bb
Reviewed-on: https://chromium-review.googlesource.com/875201
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531959}
Former-commit-id: e86e71037d21854403f325cd30e986ffde87ea49